--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,10 +1,23 @@
 cmake_minimum_required(VERSION 3.14)
 
-# the name of our project
-PrOjEcT(some_sums)
+# the name of our project & the language it uses
+project(many_sums LANGUAGES CXX)
+
+# specify language standards (global variables)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# create a library with the common functions
+add_library(sum_lib STATIC)
 
 # request to build an executable
-add_executable(some_sums src/sum.cpp src/sum_fast.cpp src/main.cpp)
+add_executable(some_sums)
+add_executable(more_sums)
+target_link_libraries(some_sums PRIVATE sum_lib)
+target_link_libraries(more_sums PRIVATE sum_lib)
 
 # suggest a path to CMake so that it finds the header files
 target_include_directories(some_sums PRIVATE inc)
+target_include_directories(more_sums PRIVATE inc)
+
+add_subdirectory(src)
