--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -7,6 +7,15 @@ project(many_sums LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+# look for BLAS using CMake's script
+find_package(BLAS REQUIRED)
+message("BLAS libraries are: ${BLAS_LIBRARIES}")
+message("BLAS link line is: ${BLAS_LINKER_FLAGS}")
+message("CXX compiler is: ${CMAKE_CXX_COMPILER}")
+if(BLAS_LIBRARIES MATCHES "mkl")
+  message("MKL seems to be in use")
+endif()
+
 # create a library with the common functions
 add_library(sum_lib STATIC)
 
@@ -14,7 +23,8 @@ add_library(sum_lib STATIC)
 add_executable(some_sums)
 add_executable(more_sums)
 target_link_libraries(some_sums PRIVATE sum_lib)
-target_link_libraries(more_sums PRIVATE sum_lib blas)
+target_link_libraries(more_sums PRIVATE sum_lib ${BLAS_LIBRARIES})
+target_link_options(more_sums PRIVATE ${BLAS_LINKER_FLAGS})
 
 # suggest a path to CMake so that it finds the header files
 target_include_directories(some_sums PRIVATE inc)
